feat(wip): adds way to create posts

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	"dependencies": {
 		"@picocss/pico": "^2.1.1",
 		"better-auth": "^1.4.9",
-		"postgres": "^3.4.7"
+		"postgres": "^3.4.7",
+		"zod": "^4.2.1"
 	}
 }
